# ReCoDE-NeuralODEs

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pr-dependency-check.yml
01-introduction/: index.html
01-simple-integration-routines/: index.html
02-arbitrary-adaptive-tableaus/: index.html
03-the-adjoint-method/: index.html
04-driven-harmonic-oscillator/: index.html
05-the-inverted-pendulum/: index.html
artifacts/: trained-inverted-pendulum-success-3.pt
docs/: 01-introduction.md  02-adjoint-method.md  03-simple-harmonic-oscillator.md  04-cart-pole.md  index.md
neuralode/: __init__.py  closures.py  dynamics.py  util.py
neuralode/integrators/: __init__.py  classes.py  helpers.py  integrators.py  routines.py  signatures.py
neuralode/models/: __init__.py  inverted_pendulum.py  oscillator.py  util.py
neuralode/plot/: __init__.py  inverted_pendulum.py  trajectory.py
notebooks/: 01-simple-integration-routines.ipynb  02-arbitrary-adaptive-tableaus.ipynb  03-the-adjoint-method.ipynb  04-driven-harmonic-oscillator.ipynb  04-simple-harmonic-oscillator.ipynb  04-the-inverted-pendulum.ipynb  05-n-body-problem.ipynb  05-the-inverted-pendulum.ipynb  06-simple-harmonic-oscillator.ipynb
notebooks/artifacts/: trained-inverted-pendulum-success-1.pt  trained-inverted-pendulum-success-2.pt
search/: search_index.json
